# stm32_cubemx_icm20948

./: .gitmodules  CMakeLists.txt  Makefile  devcontainer-stm32-cubemx-icm20948.ioc
Core/Inc/: i2c.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: gpio.c  i2c.c  main.c  stm32l4xx_it.c
app/ak09916/: CMakeLists.txt  ak09916.cpp  ak09916.hpp  ak09916_config.hpp  ak09916_registers.hpp
app/icm20948/: CMakeLists.txt  icm20948.cpp  icm20948.hpp  icm20948_config.hpp  icm20948_dmp.cpp  icm20948_dmp.hpp  icm20948_dmp_config.hpp  icm20948_dmp_img.hpp  icm20948_dmp_mem.hpp  icm20948_dmp_registers.hpp  icm20948_mag.cpp  icm20948_mag.hpp  icm20948_registers.hpp
app/icm_20948_sensor/: CMakeLists.txt  icm_sensor.c  icm_sensor.h
app/main/: CMakeLists.txt  main.cpp  main2.cpp
app/utility/: i2c_device.cpp  i2c_device.hpp
cmake/: gcc-arm-none-eabi.cmake
